	hard-coded as UTF-8, as everything should be in that encoding now.  If
	some page is not, it's a fault, and should get reported.

	* webgen/welcome.html, webgen/software.all: Fix a typo, and point to
	'poEdit' instead of the dead 'gtranslator'.

	* registry/registry.sgml: Synced with Montréal.

	* registry/Makefile: Fix name of script.

2007-06-23  Benno Schulenberg  <benno@vertaalt.nl>

	* web/Makefile, doc/whydisclaim.html, doc/disclaim.txt:
	Install the dislaimer text on the website, link to it, and
	slightly tweak its layout.

	* web/html-to-cgi, web/to-html, web/registry.cgi.in: Recode a few
	overlooked files to UTF-8, and adjust their docstrings.

	* web/layout.html, lib/config.py, doc/Makefile, web/Makefile:
	Rename 'layout.html' to 'layout.html.in', to bring it in line with
	the other *.in files, and to make room for real *.html files.

	* doc/index.html, doc/Makefile,  web/layout.html.in:
	Rename 'index.html' to a more descriptive 'welcome.html'.

	* web/stepinto.html.in: Link to the renamed entry page.

	* web/html-to-cgi, web/to-html, doc/Makefile, web/Makefile:
	Add the extension '.py' to 'html-to-cgi' and 'to-html', to clearly
	show they are Python scripts, and not CGI or HTML things.

	* doc/*.all, doc/*.html, doc/*.txt, web/Makefile: Move all template
	files to the web generation directory, and adjust the 'make' rules. 

	* doc/DISCLAIM, doc/Makefile, doc/: Delete obsolete remains.

	* web/Makefile: Add missing dependencies.

	* Makefile, lib/config.py, web/Makefile, web/registry.cgi.in:
	Rename 'web/' to 'webgen/', add a rule in the main Makefile.

	* webgen/maintainers.all, webgen/leaders.all, webgen/translators.all:
	Update some hard-coded paths.

	* bin/i18n-aliases: Make sure team or domain aliases do not match the
	tail of words like "coordinator".

	* bin/make-maintain: Rename to 'clone-domain' and expand its docstring.

	* bin/i18n-aliases: Rename to 'create-mail-aliases'.
