@@ -12,6 +12,8 @@
 
 	* registry/Makefile: Fix name of script.
 
+	* lib/localweb.py: Clearer error messages during page generation.
+
 2007-06-23  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* web/Makefile, doc/whydisclaim.html, doc/disclaim.txt:
